<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.profile.CreateProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="660dp"
        android:orientation="vertical"
        tools:context=".views.profile.EditProfileActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="185dp"
                android:layout_height="140dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/ic_image" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_camera"
                android:layout_marginStart="220dp"
                android:layout_marginTop="95dp"/>
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/orange_background"
            android:layout_marginStart="70dp"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/orange_background"
            app:hintTextColor="@color/orange_background"
            app:startIconDrawable="@drawable/ic_person_outline"
            app:startIconTint="@color/orange_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/orange_background"
            android:layout_marginStart="70dp"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/orange_background"
            app:hintTextColor="@color/orange_background"
            app:startIconDrawable="@drawable/ic_date"
            app:startIconTint="@color/orange_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/date"
                android:inputType="date"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/orange_background"
            android:layout_marginStart="70dp"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/orange_background"
            app:hintTextColor="@color/orange_background"
            app:startIconDrawable="@drawable/ic_location"
            app:startIconTint="@color/orange_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/location"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/genderContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/orange_background"
            android:layout_marginStart="70dp"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/orange_background"
            app:hintTextColor="@color/orange_background"
            app:startIconDrawable="@drawable/ic_transgender"
            app:startIconTint="@color/orange_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/genderEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Gender"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_save"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="70dp" />

    </LinearLayout>
</ScrollView>