<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.authentication.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit_register"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/orange_background"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="690dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".views.authentication.LoginActivity">

            <ImageView
                android:id="@+id/logo_login"
                android:layout_width="191dp"
                android:layout_height="190dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="45dp"
                app:srcCompat="@drawable/rounded_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/orange_background"
                app:boxCornerRadiusBottomEnd="17dp"
                app:boxCornerRadiusBottomStart="17dp"
                app:boxCornerRadiusTopEnd="17dp"
                app:boxCornerRadiusTopStart="11dp"
                app:boxStrokeWidth="1dp"
                app:endIconMode="clear_text"
                app:helperText="required"
                app:helperTextTextColor="@color/orange_background"
                app:hintTextColor="@color/orange_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_person_outline"
                app:startIconTint="@color/orange_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/orange_background"
                app:boxCornerRadiusBottomEnd="17dp"
                app:boxCornerRadiusBottomStart="17dp"
                app:boxCornerRadiusTopEnd="17dp"
                app:boxCornerRadiusTopStart="11dp"
                app:boxStrokeWidth="1dp"
                app:endIconMode="clear_text"
                app:helperText="required"
                app:helperTextTextColor="@color/orange_background"
                app:hintTextColor="@color/orange_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/orange_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/orange_background"
                app:boxCornerRadiusBottomEnd="17dp"
                app:boxCornerRadiusBottomStart="17dp"
                app:boxCornerRadiusTopEnd="17dp"
                app:boxCornerRadiusTopStart="11dp"
                app:boxStrokeWidth="1dp"
                app:endIconMode="clear_text"
                app:helperText="required"
                app:helperTextTextColor="@color/orange_background"
                app:hintTextColor="@color/orange_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/orange_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="14dp"
                android:textColorHint="@color/orange_background"
                app:boxCornerRadiusBottomEnd="17dp"
                app:boxCornerRadiusBottomStart="17dp"
                app:boxCornerRadiusTopEnd="17dp"
                app:boxCornerRadiusTopStart="17dp"
                app:boxStrokeWidth="1dp"
                app:endIconMode="password_toggle"
                app:helperText="required"
                app:helperTextTextColor="@color/orange_background"
                app:hintTextColor="@color/orange_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_lock_person"
                app:startIconTint="@color/orange_background">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="20dp"
                android:text="@string/Register"
                app:backgroundTint="@color/orange_background" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView >