<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="660dp"
        tools:context=".views.profile.ProfileActivity">

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="172dp"
            android:layout_height="153dp"
            android:layout_marginTop="33dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_image" />

        <TextView
            android:id="@+id/username_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/username_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.855"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_profile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_person_outline" />

                <TextView
                    android:id="@+id/name_profile"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:text="name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:id="@+id/email_profile"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:text="Email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_date" />

                <TextView
                    android:id="@+id/date_profile"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:text="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:text="location" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_transgender" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:text="gender" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.322"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/button_logout"
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:text="@string/logout"
                android:textSize="12sp"
                android:textColor="@color/orange_background"
                app:strokeColor="@color/orange_background"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/button_edit"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textSize="12sp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
